# crayons-api-gateway

./: README.md  const.py  docker-compose.yml  main.py  pyproject.toml  responses.py  utils.py
auth/: __init__.py  schemas.py  views.py
diagrams/: __init__.py  views.py
project/: __init__.py  schemas.py  views.py
user/: __init__.py  schemas.py  views.py
